--- a/site/static/manifest.json
+++ b/site/static/manifest.json
@@ -2,12 +2,12 @@
 	"name": "",
 	"icons": [
 		{
-			"src": "\/img\/android-chrome-192x192.png",
+			"src": "\/img\/No Vacancy NV.jpg",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/img\/android-chrome-512x512.png",
+			"src": "\/img\/No Vacancy NV.jpg",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
