--- a/site/static/manifest.json
+++ b/site/static/manifest.json
@@ -4,12 +4,12 @@
 		{
 			"src": "\/img\/No Vacancy NV.jpg",
 			"sizes": "192x192",
-			"type": "image\/png"
+			"type": "image\/jpg"
 		},
 		{
 			"src": "\/img\/No Vacancy NV.jpg",
 			"sizes": "512x512",
-			"type": "image\/png"
+			"type": "image\/jpg"
 		}
 	],
 	"theme_color": "#ffffff",
